# cobra

./: CMakeLists.txt  README.md
include/cobra/: AbstractInstanceParser.hpp  BitMatrix.hpp  FixedSizeValueStack.hpp  Flat2DVector.hpp  Instance.hpp  LRUCache.hpp  LocalSearch.hpp  MoveGenerators.hpp  NonCopyable.hpp  PrettyPrinter.hpp  SimulatedAnnealing.hpp  Solution.hpp  VertexSet.hpp  Welford.hpp  mm.hpp
instances/B/: Leuven1.txt
instances/K/: bins_East.inp  bins_Middle.inp  bins_R12.inp  bins_R3.inp  bins_R6.inp  bins_R9.inp  bins_South.inp  bins_West.inp
instances/Z/: zk1.txt  zk2.txt  zk3.txt  zk4.txt
src/: CMakeLists.txt
src/macro/: macro.hpp
src/movegen/: AbstractMoveGeneratorsView.cpp  MoveGenerators.cpp  MoveGeneratorsHeap.cpp
src/solution/: Solution.cpp  SolutionConstruction.cpp  SolutionUtilities.cpp
